--- a/index.html
+++ b/index.html
@@ -1,16 +1,60 @@
-﻿<html>
-	<head>
-		<style>
-			body{
-				background-color: green;
-				color: white
-			}
-		</style>
-	</head>
-	
-	<body>
-		<h1 align='center'>Study Link</h1>
-		<h2>Косаняк Мар'ян</h2>
-		<h3>Неділя 14:00</h3>
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> 
+    <title>Document</title>
+</head>
+<body>
+    <h1 align='center'>Study Link</h1>
+    <h3 align='center'><Курс HTML/CSS></h3>
+
+    <ol id='program_list'>
+
+    </ol>
+
+    <script>
+        $(document).ready(function(){
+            var temes = [
+                {tema: 'Вступний урок', task: '', materials: '', video: ''},
+                {tema: 'Заголовки, введення в CSS', task: '', materials: '', video: ''},
+                {tema: 'Форматування тексту і фон сторінки', task: '', materials: '', video: ''},
+                {tema: 'Списки, тег hr', task: '', materials: '', video: ''},
+                {tema: 'Самостійна робота', task: '', materials: '', video: ''},
+                {tema: 'Робота над помилками, розвиваючі вправи', task: '', materials: '', video: ''},
+                {tema: 'Робота з Git #1', task: '', materials: '', video: ''},
+                {tema: 'Робота з Git #2', task: '', materials: '', video: ''},
+                {tema: 'Робота з Git #3', task: '', materials: '', video: ''},
+                {tema: 'Робота з Git #4', task: '', materials: '', video: ''},
+                {tema: 'Робота з Git #5', task: '', materials: '', video: ''},
+                {tema: 'Робота з зображеннями в HTML, CSS', task: 'kosaniakmarianone.github.io/t12/1/img_1.html', materials: 'https://drive.google.com/drive/folders/1d7DQ8NrSjL7oOGeVhM7GII3InORer-qN', video: 'https://www.youtube.com/watch?v=gx8uKZZna2g&feature=youtu.be'}
+            ]
+
+            temes.map( item => {
+                $("#program_list").append(
+                    '<li class="list">'+item.tema+
+                        '<ul class="hide">'+
+                            '<li><a href="'+item.task+'">Завдання</a></li>'+
+                            '<li><a href="'+item.materials+'">Матеріали</a></li>'+
+                            '<li><a href="'+item.video+'">Відео</a></li>'+
+                        '</ul>'+
+                    '</li>'
+                )
+            }
+            );
+            $('.list').click(function(){
+                if($(this).children().attr('class') == 'hide'){
+                    console.log('oasf');
+                    $(this).children('.hide').removeClass( "hide" ).addClass( "show" )  
+                } 
+                else{
+                    $(this).children('.show').removeClass( "show" ).addClass( "hide" )  
+                } 
+            })
+        });
+    </script>
+</body>
 </html>
