--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     Video = ''
                 }
                 if(item.task == '' && item.video == '' && item.materials == ''){
-                    Task = '<li>Тема не відкрита/li>'
+                    Task = '<li>Тема не відкрита</li>'
                 }
                 
                 $("#program_list").append(
