--- a/t4/3_1.html
+++ b/t4/3_1.html
@@ -41,10 +41,12 @@
     
 <h1>Можливий рейтинг</h1>
         100%
-        <hr size="30" width="35%" color="green" align="left">
+        <hr size="30" width="50%" color="green" align="left">
         <br>
-        50%
-        <hr size="30" width="17.5%" color="orange" align="left">
+        66.6%
+        <hr size="30" width="33.3%" color="yellow" align="left">
+        33.3%
+		<hr size="30" width="16.65%" color="orange" align="left">
         0%
         <hr size="30" width="0%" color="red" align="left">
         
