--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <div class="block">
         <!--Вікно входу-->
 
-            <button type="button" id='signIn' class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+            <p align='center'><button type="button" id='signIn' class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
                 Увійти
-            </button>
+            </button></p>
 
             <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
@@ -56,7 +56,7 @@
 
         <h1 align="center">Study Link</h1>
         <h3 align="center"><Курс HTML/CSS></h3>
-        <p id='errorBlock'></p>
+        <p id='errorBlock' align=center></p>
         <ol id="program_list">
 
         </ol>
