--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     if(!loged){
                         $('#errorBlock').text('Невірна назва групи, або пароль');
                         $('#errorBlock').append(
-                            '<a href="http://kosaniakmarianone.github.io" class="btn btn-warning" >Спробувати ще</a>'
+                            '<a href="http://kosaniakmarianone.github.io" class="btn btn-warning btn-text" >Спробувати ще </a>'
                         );
                         $('#signIn').hide();
                     }
