--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <form id='form' >
                                 <select class="form-control form-control-lg" id='school'>
                                     <option>Надія</option>
-                                    <option>Надія2</option>
+                                    <option>Інша школа</option>
                                 </select>
                                 <div class="form-group">
                                     <label for="exampleInputEmail1">Назва групи</label>
