--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src='temes.js'></script>
     <script src='allgroups.js'></script>
 
-    <title>Document</title>
+    <title>My site</title>
 </head>
 <body>
     <div class="block">
