--- a/t19/1.html
+++ b/t19/1.html
@@ -60,13 +60,13 @@
 		</title>
 	</head>
 	<body>
-
+		<header class='menu'>
 			<ul>
 				<li><a href="1.html" class="button button1">Головна</a>
 				<li><a href="2.html" class="button button2">Галерея</a>
-				
 			</ul>
-			
+		</header>	
+		<main>
 				<h1 align="center" class="name">Моя сторінка</h1>
 
 				<img src="images.jfif" align="left" class="img2">
@@ -77,5 +77,11 @@
 				<p>Вік:</p>
 				<p>Е-пошта:</p>
 				</p>
+		</main>
+		<footer>
+			<div class='footer1'>Logo</div>
+			<div class='footer1'>&copy; Всі права захищено</div>
+			<div class='footer1'>mynew@gmail.com</div>
+		</footer>
 	</body>
 </html>
