--- a/stream/index3.html
+++ b/stream/index3.html
@@ -12,15 +12,15 @@
 		</nav>
 	</header>
 	
-	<h1 align="center" class="vstavka">Медичні маски</h1>
+	<h1 align="center" class="vstavka">Антисептики</h1>
 	
 	<main>
 		<div class="block">
 			<div class="w-35 fl">
-				<img src="1.jpg" class="photo">
+				<img src="2-1.webp" class="photo">
 			</div>
 			<div class="w-65 fl">
-				<h1 align="center">Маска "MEGASPECTR"</h1>
+				<h1 align="center">Антисептик "HARMOND"</h1>
 				<h2 align="center">Ціна: 100грн</h2>
 				<h1 align="center">
 					<input type="number" value="1" min=0>
@@ -31,10 +31,10 @@
 		
 		<div class="block">
 			<div class="w-35 fl">
-				<img src="2.jpg" class="photo">
+				<img src="2-2.jpg" class="photo">
 			</div>
 			<div class="w-65 fl">
-				<h1 align="center">Маска "TUFISHOP"</h1>
+				<h1 align="center">Антисептик "КРОНА"</h1>
 				<h2 align="center">Ціна: 250грн</h2>
 				<h3 align="center">
 					<input type="number" value="1" min=0>
@@ -45,10 +45,10 @@
 		
 		<div class="block">
 			<div class="w-35 fl">
-				<img src="3.jpg" class="photo">
+				<img src="2-3.jpg" class="photo">
 			</div>
 			<div class="w-65 fl">
-				<h1 align="center">Маска "Звичайна"</h1>
+				<h1 align="center">Антисептик "BREWGEL"</h1>
 				<h2 align="center">Ціна: 20грн</h2>
 				<h1 align="center">
 					<input type="number" value="1" min=0>
