--- a/stream/index2.html
+++ b/stream/index2.html
@@ -1,27 +1,27 @@
 <html>
 <head>
-	<title>Document</title>
+	<title>MyShop</title>
 	<link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<header>
 		<nav>
-			<a href='index2.html'>Маски</a>
-			<a href='index3.html'>Антисептики</a>
+			<a href='index2.html'>Велосипеди</a>
+			<a href='index3.html'>Самокати</a>
 		</nav>
 	</header>
 	
-	<h1 align="center" class="vstavka">Медичні маски</h1>
+	<h1 align="center" class="vstavka">Велосипеди</h1>
 	
 	<main>
 		<div class="block">
 			<div class="w-35 fl">
-				<img src="1.jpg" class="photo">
+				<img src="1.webp" class="photo">
 			</div>
 			<div class="w-65 fl">
-				<h1 align="center">Маска "MEGASPECTR"</h1>
-				<h2 align="center">Ціна: 100грн</h2>
+				<h1 align="center">Велосипед "FORMULA"</h1>
+				<h2 align="center">Ціна: 8000грн</h2>
 				<h1 align="center">
 					<input type="number" value="1" min=0>
 					<a href="#" class="button">Замовити</a>
@@ -31,11 +31,11 @@
 		
 		<div class="block">
 			<div class="w-35 fl">
-				<img src="2.jpg" class="photo">
+				<img src="2.webp" class="photo">
 			</div>
 			<div class="w-65 fl">
-				<h1 align="center">Маска "TUFISHOP"</h1>
-				<h2 align="center">Ціна: 250грн</h2>
+				<h1 align="center">Велосипед "TOP RIDER"</h1>
+				<h2 align="center">Ціна: 9525грн</h2>
 				<h3 align="center">
 					<input type="number" value="1" min=0>
 					<a href="#" class="button">Замовити</a>
@@ -48,8 +48,8 @@
 				<img src="3.jpg" class="photo">
 			</div>
 			<div class="w-65 fl">
-				<h1 align="center">Маска "Звичайна"</h1>
-				<h2 align="center">Ціна: 20грн</h2>
+				<h1 align="center">Велосипед "MERIDA"</h1>
+				<h2 align="center">Ціна: 6200грн</h2>
 				<h1 align="center">
 					<input type="number" value="1" min=0>
 					<a href="#" class="button">Замовити</a>
