--- a/stream/index3.html
+++ b/stream/index3.html
@@ -1,27 +1,27 @@
 <html>
 <head>
-	<title>Document</title>
+	<title>MyShop</title>
 	<link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<header>
 		<nav>
-			<a href='index2.html'>Маски</a>
-			<a href='index3.html'>Антисептики</a>
+			<a href='index2.html'>Велосипеди</a>
+			<a href='index3.html'>Самокати</a>
 		</nav>
 	</header>
 	
-	<h1 align="center" class="vstavka">Антисептики</h1>
+	<h1 align="center" class="vstavka">Самокати</h1>
 	
 	<main>
 		<div class="block">
 			<div class="w-35 fl">
-				<img src="2-1.webp" class="photo">
+				<img src="2-1.jpg" class="photo">
 			</div>
 			<div class="w-65 fl">
-				<h1 align="center">Антисептик "HARMOND"</h1>
-				<h2 align="center">Ціна: 100грн</h2>
+				<h1 align="center">Самокати "RIDERONE"</h1>
+				<h2 align="center">Ціна: 4000грн</h2>
 				<h1 align="center">
 					<input type="number" value="1" min=0>
 					<a href="#" class="button">Замовити</a>
@@ -31,11 +31,11 @@
 		
 		<div class="block">
 			<div class="w-35 fl">
-				<img src="2-2.jpg" class="photo">
+				<img src="2-2.webp" class="photo">
 			</div>
 			<div class="w-65 fl">
-				<h1 align="center">Антисептик "КРОНА"</h1>
-				<h2 align="center">Ціна: 250грн</h2>
+				<h1 align="center">Самокати "DRIVEDAY"</h1>
+				<h2 align="center">Ціна: 5200грн</h2>
 				<h3 align="center">
 					<input type="number" value="1" min=0>
 					<a href="#" class="button">Замовити</a>
@@ -45,11 +45,11 @@
 		
 		<div class="block">
 			<div class="w-35 fl">
-				<img src="2-3.jpg" class="photo">
+				<img src="2-3.webp" class="photo">
 			</div>
 			<div class="w-65 fl">
-				<h1 align="center">Антисептик "BREWGEL"</h1>
-				<h2 align="center">Ціна: 20грн</h2>
+				<h1 align="center">Антисептик "INMUVE"</h1>
+				<h2 align="center">Ціна: 3000грн</h2>
 				<h1 align="center">
 					<input type="number" value="1" min=0>
 					<a href="#" class="button">Замовити</a>
