--- a/t15/t3/3.html
+++ b/t15/t3/3.html
@@ -49,7 +49,7 @@
 <tr>
 	<th rowspan="3">EA</th>
 	<td>FIFA</td>
-		<td><img src="FIFA.png" width="100px"></td>
+		<td><img src="fifa.png" width="100px"></td>
 </tr>
 <tr>
 	<td>Battlefield</td>
