--- a/t28/gallery.html
+++ b/t28/gallery.html
@@ -3,7 +3,7 @@
 <head> 
 	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style_g.css">
-	<title>Головна</title>
+	<title>Gallery</title>
 </head>
 <body>
 	<header>
