--- a/t28/about.html
+++ b/t28/about.html
@@ -4,7 +4,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style_a.css">
-	<title>Головна</title>
+	<title>About Us</title>
 </head>
 <body>
 	<header>
