--- a/t28/index.html
+++ b/t28/index.html
@@ -6,7 +6,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
 		<link rel="stylesheet" href="style.css">
-		<title>Головна</title>
+		<title>Main</title>
 	</head>
 	<body>
 		<header>
