--- a/t19/2.html
+++ b/t19/2.html
@@ -4,7 +4,7 @@
 		<style>
 			body{
 				margin: 0; 
-				background: linear-gradient(to bottom,red,purple);
+				background-image: url('index.jpg');
 				background-attachment: fixed;
 			}
 			li{
@@ -71,23 +71,24 @@
 	
 
 	</title>
-</head>
-<body>
-
-		<ul>
-			<li><a href="1.html" class="button button1">Головна</a>
-			<li><a href="2.html" class="button button2">Галерея</a>
-			
-		</ul>
-
-			<h1 align="center" class="name">Галерея</h1>
-			<div class="gallery">
-				<p align="center"><img src="1.jpg" class="gal"></p>
-			</div>
-			<p class="text">
-		Галере́я (фр. galerie, від італ. galleria) — комунікаційний простір у вигляді критого переходу(коридору), аркади, колонади, антресолі або подовженого балкона, що з'єднує приміщення чи частини будинку; може бути глухою, заскленою чи не бути огородженою (крім перил). Галереєю також може бути велика видовжена зала, освітлена з одного боку великими вікнами. Глуха поздовжня стіна навпроти вікон зазвичай прикрашалась гобеленами, численними станковими картинами, невеликими скульптурними творами. Термін галерея згодом став вживатися для відповідного типу споруд з державними і приватними зібраннями живописних праць, художніми колекціями. Тобто:
-
-		галерея художня — споруда, де зберігаються і експонуються твори станкового і декоративно-ужиткового мистецтва. Характерна анфіладним розплануванням просторих залів, влаштуванням ліхтарів для верхнього освітлення і репрезентативним зовнішнім виглядом.
+	</head>
+	<body>
+		<nav>
+			<ul>
+				<li><a href="1.html" class="button button1">Головна</a>
+				<li><a href="2.html" class="button button2">Галерея</a>
+				
+			</ul>
+		</nav>
+		
+		<h1 align="center" class="name">Галерея</h1>
+		
+		<div class="gallery">
+			<p align="center"><img src="1.jpg" class="gal"></p>
+		</div>
+		
+		<p class="text">
+			Галере́я (фр. galerie, від італ. galleria) — комунікаційний простір у вигляді критого переходу(коридору), аркади, колонади, антресолі або подовженого балкона, що з'єднує приміщення чи частини будинку; може бути глухою, заскленою чи не бути огородженою (крім перил). Галереєю також може бути велика видовжена зала, освітлена з одного боку великими вікнами. Глуха поздовжня стіна навпроти вікон зазвичай прикрашалась гобеленами, численними станковими картинами, невеликими скульптурними творами. Термін галерея згодом став вживатися для відповідного типу споруд з державними і приватними зібраннями живописних праць, художніми колекціями. Тобто: галерея художня — споруда, де зберігаються і експонуються твори станкового і декоративно-ужиткового мистецтва. Характерна анфіладним розплануванням просторих залів, влаштуванням ліхтарів для верхнього освітлення і репрезентативним зовнішнім виглядом.
 		</p>
 
 </body>
