--- a/t21/1.html
+++ b/t21/1.html
@@ -17,13 +17,13 @@
 
 	<h1 align="center">Анкета учасника</h1>
 	<br><label>Введіть ваше ім'я</label>
-		<br><input type="text" >
+		<br><input type="text" required="required">
 		<br>
 		<label>Введіть ваш клас</label>
-		<br><input type="number" min="1"max=12>
+		<br><input type="number" min="1" max="12" required="required">
 
 		<br><label>Введіть ваш e-mail</label>
-		<br><input type="email" >
+		<br><input type="email" required="required">
 		<br><br>
 		<label>Які мови ви знаєте?</label><br>
 		<input type="checkbox" name="a1">Українська
