--- a/results/index.html
+++ b/results/index.html
@@ -7,14 +7,15 @@
     <link rel="stylesheet" href="bs/bootstrap.min.css">
 </head>
 <body>
+	<p><sup>*</sup>Дописує - вносить правки <p>
+	<p><sup>*</sup>Немає v1 - Або почали робити на останньому занятті, або проблеми з комп'ютером,	або відсутні з початку червня</p>
     <table class="table">
         <thead>
             <tr>
               <th scope="col">#</th>
-              <th scope="col">Група</th>
+              <th scope="col">Заклад</th>
               <th scope="col">Ім'я</th>
               <th scope="col">Курсова</th>
-              <th scope="col">Github</th>
               <th scope="col">Оцінка</th>
             </tr>
           </thead>
