--- a/results/index.html
+++ b/results/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="bs/bootstrap.min.css">
 </head>
 <body>
-	<p><sup>*</sup>Дописує - вносить правки <p>
+	<p><sup>*</sup>Дописує - є версія №1 але потрібно внести правки <p>
 	<p><sup>*</sup>Немає v1 - Або почали робити на останньому занятті, або проблеми з комп'ютером,	або відсутні з початку червня</p>
     <table class="table">
         <thead>
