--- a/js/t1/index.html
+++ b/js/t1/index.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <script src="z1.js"></script>
-    <script src="z2.js"></script>
-</body>
+<html>
+	<head>
+		<title>Тема 1</title>
+		<style>
+		
+		</style>
+	</head>
+	
+	<body>
+		
+		<script src="z3.js"></script>
+	</body>
 </html>
