--- a/js/t5/z1.html
+++ b/js/t5/z1.html
@@ -10,6 +10,7 @@
         b{color: red}
 		i{color: white;}
 		#message{background: lime;}
+	    #more{background: orange;}
     </style>
 </head>
 <body>
@@ -39,7 +40,7 @@
 	</h2>
 	
 	<h2 id="message">
-		4) Мінімум 2 питання на які потрібно словом або вказати рік.<br>
+		4) Мінімум 2 питання на які потрібно відповісти словом або вказати рік.<br>
 		Врахуйте випадки коли користувач може ввести відповідь з малої чи великої букви, або вкаже рік таким чином - <i>1991</i> або <i>1991р</i> або <i>1991 рік</i>.
 		<br>
 		<b>+15 балів</b>
@@ -64,7 +65,17 @@
 		<b>+15 балів</b>
 	</h2>
 	
+	<h2 id="more">
+		ДОДАТКОВО
+	</h2>
 	
+	<h2 id="more">
+		1) На початку тесту запитайте ім'я користувача. Привітайте його перед початком тесту і зверніться до нього при виведенні результату.
+	</h2>
+	
+	<h2 id="more">
+		2) Виведіть у результат скільки вілповідей на питаня були вірними і невірними. 
+	</h2>
 	
 	
 	
