--- a/js/t7/z2.html
+++ b/js/t7/z2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Тема 2</title>
+    <title>Тема 7</title>
     <style>
         body{font-family: sans-serif;color:navy}
         p{font-size: 25px;}
@@ -21,7 +21,7 @@
 		<br><br>1) Якщо такого числа у масиві немає додайте його в кінець масиву.
 		<br><br>2) Якщо таке число вже є у масиві замініть його на *.
 		<br><br>3) Виведіть початковий масив та масив який вийшов після введення чисел.
-		<br><br>4) Якщо довжина масиву менша за 5 виведіть повідомлення "Премога. Вгадано числа <b>1</b>, <b>5</b>, <b>8</b> .
+		<br><br>4) Якщо довжина масиву менша-рівна за 5 виведіть повідомлення "Премога. Вгадано числа <b>1</b>, <b>5</b>, <b>8</b> ."
 		
 	</h2>
 	
