--- a/js/t7/z1.html
+++ b/js/t7/z1.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Тема 2</title>
+    <title>Тема 7</title>
     <style>
         body{font-family: sans-serif;color:navy}
         p{font-size: 25px;}
         b{color: red}
 		#message{background: lime;max-width: 1000px}
-		#message2{background: lime;max-width: 700px}
+		#message2{background: orange;max-width: 700px}
+	    
     </style>
 </head>
 <body>
@@ -20,7 +21,18 @@
 	</h2>
 	
 	<h2 id="message">
-		Введіть ваш пароль. Залишилось спроб - <b>2</b> .
+		Введіть ваш пароль. Залишилось спроб - <b>3</b> .
+	</h2>
+	
+	<h2 id="message">
+		Введіть ваш пароль. Залишилось спроб - <b>1</b> .
+	</h2>
+	
+	<h2 id="message2">
+		Додатково
+	</h2>
+	<h2 id="message">
+		Перед останньо спробою ввести пароль виведіть піказку до паролю за допомогою alert();
 	</h2>
 </body>
 </html>
