--- a/js/t11/z1.html
+++ b/js/t11/z1.html
@@ -1,19 +1,89 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Тема 11. Завдання 1</title>
-	<link rel="stylesheet" href="main.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Тема 11. Завдання 1</title>
+    <style>
+        body{font-family: sans-serif;color:navy}
+        p{font-size: 25px;}
+        b{color: red}
+		#message{background: lime;max-width: 100%;}
+		#message--p{display: inline-block;background: orange}
+		#message2{background: orange;max-width: 1000px}
+		img{
+			max-width: 900px;
+			border: 2px solid red;
+		}
+    </style>
 </head>
 <body>
-	<h1 id="monthName" align="center">
-		Календар для січня
-	</h1>
+    <h1>Тема 11. Завдання 1</h1>
+
+    <h2 id="message">
+		Створіть календар окремого місяця. Виконуйте завдання по пунктам.
+	</h2>
+	<h2 id="message--p">
+		Пункт 1
+	</h2>
 	
-	<div id="month" class="month">
-		<div class="day">1 Січня</div>
-	</div>
+	<h2 id="message">
+		Створіть картку з одним днем місяця.
+	</h2>
+	<h2 align="center">
+		<img src="z1.png">
+	</h2>
 	
-	<script src="z1.js"></script>
+	
+	<h2 id="message--p">
+		Пункт 2
+	</h2>
+	<h2 id="message">
+		За допомогою javascript додайте правильну кількість карток для усіх днів цього місяця.
+	</h2>
+	<h2 align="center">
+		<img src="z1-2.png">
+	</h2>
+	
+	<h2 id="message--p">
+		Пункт 3
+	</h2>
+	<h2 id="message">
+		Вважайте що місяць починається з понеділка. Виxідні дні повинні мати інше забарвлення.
+	</h2>
+	<h2 align="center">
+		<img src="z1-3.png">
+	</h2>
+	
+	
+	<h2 id="message--p">
+		Пункт 4
+	</h2>
+	<h2 id="message">
+		Запитайте місяць у користувача через propmt().
+	</h2>
+	<h2 align="center">
+		<img src="z1-4.png">
+	</h2>
+	
+	<h2 id="message--p">
+		Пункт 5
+	</h2>
+	<h2 id="message">
+		За допомогою if та умови або (||). Виводьте правильну кількість днів. Викоритайте цю таблицю: 
+	</h2>
+	<h2 align="center">
+		<img src="z1-5.png">
+	</h2>
+	
+	<h2 id="message--p">
+		Пункт 6
+	</h2>
+	<h2 id="message">
+		Запитайте у користувача через propmt() номер дня з якого починається місяць.
+	</h2>
+	<h2 align="center">
+		<img src="z1-6.png">
+	</h2>
 </body>
 </html>
