fix tehemes names

--- a/js/t14/index.html
+++ b/js/t14/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Тема 12. Завдання 1</title>
+    <title>Тема 14.</title>
     <style>
         body{font-family: sans-serif;color:navy}
 
@@ -51,7 +51,7 @@
 	</h2>	
 	
 	<h2 id="">
-		5. Відобразіть усіх користувачів у index файлі. Використайте <a href="users.txt" target="blank">список</a> коритувачів 
+		4. Відобразіть усіх користувачів у index файлі. Використайте <a href="users.txt" target="blank">список</a> коритувачів 
 	</h2>
 	
 	<h2 align="center">
@@ -59,7 +59,7 @@
 	</h2>
 	
 	<h2 id="">
-		4. Створіть html сторінки аналогчні index.html, попередньо змінивши клас для посилання яке повинно бути активним на відповідній сторінці. А також підключітайте окремі javascript файли для окремих сторінок.
+		5. Створіть html сторінки аналогчні index.html, попередньо змінивши клас для посилання яке повинно бути активним на відповідній сторінці. А також підключітайте окремі javascript файли для окремих сторінок.
 	</h2>
 	<h2 align="center">
 		<img src="img2.png">
