--- a/js/t15/z2.html
+++ b/js/t15/z2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Тема 15. Завдання 2</title>
+    <title>Тема 15.</title>
     <style>
         body{font-family: sans-serif;color:navy}
 
@@ -21,7 +21,7 @@
     </style>
 </head>
 <body>
-    <h1>Тема 15.</h1>
+    <h1>Тема 15. Завдання 2</h1>
 
     <h2 id="">
 		1. Створіть об'єкт user. Присвойте цьому об'єкту поля для: iм'я, прізвища, віку, еmail, міста проживання.
