--- a/js/t17/z1.html
+++ b/js/t17/z1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Тема 17. Завдання 1</title>
+    <title>Тема 17.</title>
     <style>
         body{font-family: sans-serif;color:navy}
 
@@ -21,7 +21,7 @@
     </style>
 </head>
 <body>
-    <h1>Тема 15.</h1>
+    <h1>Тема 17.</h1>
 	
 	<h2 id="">
 		1. Використайте готову верстку для завдання: <a href="html.txt">html</a>, <a href="css.txt">css</a>. Також збережіть даний масив у javascript файлі - <a href="arr.txt">масив</a>
