--- a/js/t19/z1.html
+++ b/js/t19/z1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Тема 19. Завдання 1</title>
+    <title>Тема 19.</title>
 	
     <style>
         body{font-family: sans-serif;color:navy}
@@ -22,7 +22,7 @@
     </style>
 </head>
 <body>
-    <h1>Тема 19.</h1>
+    <h1>Тема 19. Завдання 1</h1>
 	
 	<h2 id="">
 		1. Використайте готову верстку для завдання: <a href="z1.txt">index.html</a>. Після введення тексту зберігайте його у localstorage. Виводьте оновлений текст на сторінку.
