--- a/js/t11/z2.html
+++ b/js/t11/z2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Тема 11. Завдання 1</title>
+    <title>Тема 11.</title>
     <style>
         body{font-family: sans-serif;color:navy}
         p{font-size: 25px;}
