--- a/js/t19/z2.html
+++ b/js/t19/z2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Тема 19. Завдання 2</title>
+    <title>Тема 19.</title>
 	
     <style>
         body{font-family: sans-serif;color:navy}
