--- a/js/t28/index.html
+++ b/js/t28/index.html
@@ -60,6 +60,15 @@
 		5. При кліку на вибраний елемент у аккордіоні додавайте йому класс <b>.isOpen</b> (якщо він був не розгорунтий і навпаки). Використайте це для того, щоб згортати всі інші елементи якщо вони були відкритими.
   </h2>
 	
+	 <h2 id="">
+	Додатково
+  </h2>
+	
+	<h2 id="">
+	6. Відобразіть інформацію про вакзані компанії у акордіоні <a href="array.txt" target="_blank">array.js</a> 
+  </h2>
+	
+	
 	
 </body>
 </html>
