--- a/js/t30/index.html
+++ b/js/t30/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Тема 30</title>
+    <title>Створення нотифікацій</title>
 	
     <style>
         body{font-family: sans-serif;color:navy}
@@ -22,7 +22,7 @@
     </style>
 </head>
 <body>
-    <h1>Тема 30.</h1>
+    <h1>Створення нотифікацій.</h1>
 	
 	<h2 id="">
 		1. Створіть у окремому js-файлі <b>display-message.js</b> функцію <b>displayMessage(type, title, message, time)</b> яка відображатиме на сторінці повідомлення. Ця функція повинна працювати на будь-якій сторінці де підключено цей файл.
