--- a/html-css/t1/z2.html
+++ b/html-css/t1/z2.html
@@ -11,7 +11,7 @@
 		<p><b>Ім'я:</b> Мар'ян</p>
 		<p><b>Прізвище:</b> Косаняк</p>
 		<p><b>Вік:</b> 24</p>
-		<p><b>Моб. телефон:</b> 0963983205</p>
+		<p><b>Моб. телефон:</b> 096398****</p>
 
 	</body>
 </html>
