--- a/js_2/t1/index.html
+++ b/js_2/t1/index.html
@@ -1,1 +1,53 @@
-html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JavaScript v2. T1</title>
+    <style>
+        body{font-family: sans-serif;color:navy}
+        p{font-size: 25px;}
+        a,b{color: red}
+		#message{background: lime;max-width: 100%;}
+		#message--p{display: inline-block;background: orange}
+		#message2{background: orange;max-width: 1000px}
+		img{
+			max-width: 900px;
+			border: 2px solid red;
+		}
+    </style>
+    <link rel="icon" href="../Untitled.png">
+</head>
+<body>
+    <h1>Введення в firebase</h1>
+
+    <h3>1. Створіть аккаунт у firebase <a href="https://firebase.google.com/">https://firebase.google.com/</a>.</h3>
+
+
+    <h3>2. Відкрийте консоль. Та створіть firestore database</h3>
+
+    <h3 align="center">
+         <img src="images/1.png" alt="" >
+    </h3>
+
+    <h3 align="center">
+        <img src="images/2.png" alt="" >
+   </h3>
+
+    <h3 align="center">
+        <img src="images/3.png" alt="" >
+    </h3>
+
+    <h3>3. Збережіть у базі данних список користувачів з полями: <b>name</b>, <b>lastname</b>, <b>email</b>, <b>phone</b></h3>
+
+    <h3>4. Підключіть вашу базу данних до html-сторінки.</h3>
+
+    <h3 align="center">
+        <img src="images/3.png" alt="" >
+    </h3>
+
+    <h3>5. Отримайте данні з бази данних та виведіть їх на сторінку як таблицю.</h3>
+   
+</body>
+</html>
