--- a/js_2/t2/done/index.html
+++ b/js_2/t2/done/index.html
@@ -4,35 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript v2. T2</title>
-    <style>
-        body{font-family: sans-serif;color:navy}
-        p{font-size: 25px;}
-        a,b{color: red}
-		#message{background: lime;max-width: 100%;}
-		#message--p{display: inline-block;background: orange}
-		#message2{background: orange;max-width: 1000px}
-		img{
-			max-width: 900px;
-			border: 2px solid red;
-		}
-        xmp{ 
-            background: lightyellow;
-        }
-        body{
-            width: 800px;
-            margin: 0 auto;
-        }
-    </style>
-    <link rel="icon" href="../Untitled.png">
+    <title>Document</title>
 </head>
 <body>
-    <h2>Гід для новачка: JavaScript</h2>
+    <p id="spiner" align="center">
+        <img src="spiner.gif" alt="test alt">
+    </p>
 
-    <p>Введення в мову програмування, яка впливає практично на кожну дію, здійснювану вами у Інтернеті.</p>
+    <div id="list"></div>
 
-    <p>JavaScript необхідний для будь-яких дій, які ви робите, знаходячись у Інтернеті. Неважливо, чи ви надаєте інформацію про кредитну карту, шукаєте відео на YouTube, прослуховуєте музику або листуєтесь у соцмережах. Все це забезпечує джаваскріпт, мова, яку використовують, аби зробити веб-сторінки інтерактивними – і, напевне, тому, це робить його найпопулярнішою мовою програмування у світі.</p>
-
-    <p>Розробники використовують JavaScript для створення багатьох функцій, як для користувацького інтерфейсу (UI), так і для складних ефектів, включаючи:</p>  
+    <script src="https://www.gstatic.com/firebasejs/6.0.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.0.0/firebase-firestore.js"></script>
+    <script src="../firebase/index.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
