--- a/js_2/t4/index.html
+++ b/js_2/t4/index.html
@@ -49,7 +49,7 @@
         <img src="4.png" alt="" >
     </h3>
 
-    <h3>5. Створіть функцію <b>deleteDoc(id)</b> яка приматиме id документа та видалятиме його</h3>
+    <h3>5. Створіть функцію <b>deleteDoc(id)</b> яка прийматиме id документа та видалятиме його</h3>
 
     <xmp>
         <script>
