--- a/js_2/t5/index.html
+++ b/js_2/t5/index.html
@@ -33,7 +33,7 @@
         <img src="0.png" width="500px" alt="" >
     </h3>
     
-    <h3>3. Зберігайте данні по кліку на кнопку Save edits</h3>
+    <h3>3. Зберігайте данні по кліку на кнопку "Save changes"</h3>
 
     <h3 align="center">
         <img src="1.png" alt="" >
